--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,3 +23,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.1.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
