--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Oct 20 16:05:31 CDT 2016
-sdk.dir=/Users/Tim/Library/Android/sdk
+#Sat Oct 22 15:54:48 CDT 2016
+sdk.dir=C\:\\Users\\crkuk\\AppData\\Local\\Android\\sdk
