--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -25,7 +26,17 @@ dependencies {
     compile 'com.android.support:design:23.4.0'
     compile 'com.google.firebase:firebase-auth:9.8.00'
     compile 'com.android.support:support-v4:23.4.0'
+    compile 'com.android.support:support-vector-drawable:23.4.0'
 }
+
+
+
+
+
+
+
+
+
 
 
 
