--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,10 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".RegisterActivity"
+            android:label="ISUCarpool">
+        </activity>
+        <activity
             android:name=".LoginActivity"
             android:label="@string/app_name">
             <intent-filter>
