--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Oct 22 15:54:48 CDT 2016
-sdk.dir=C\:\\Users\\crkuk\\AppData\\Local\\Android\\sdk
+#Sun Oct 23 15:45:30 CDT 2016
+sdk.dir=C\:\\Android\\sdk
