--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Oct 23 15:45:30 CDT 2016
-sdk.dir=C\:\\Android\\sdk
+#Mon Oct 24 13:55:15 CDT 2016
+sdk.dir=/Users/Tim/Library/Android/sdk
