--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,14 +6,17 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".RegisterActivity"
-            android:label="ISUCarpool">
-        </activity>
+            android:label="Register"
+            android:theme="@style/AppTheme" />
+
         <activity
             android:name=".LoginActivity"
-            android:label="@string/app_name">
+            android:label="Sign-In"
+            android:theme="@style/AppTheme" >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,8 +24,45 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.it326.isucarpool.MainActivity" />
+        </activity>
+        <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" />
+            android:label="@string/title_activity_main"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".RidesActivity"
+            android:label="@string/title_activity_rides"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.it326.isucarpool.MainActivity" />
+        </activity>
+        <activity
+            android:name=".UserProfileActivity"
+            android:label="@string/title_activity_user_profile"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.it326.isucarpool.MainActivity" />
+        </activity>
+        <activity
+            android:name=".ChatsActivity"
+            android:label="@string/title_activity_chats"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.it326.isucarpool.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
