--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Oct 24 13:55:15 CDT 2016
-sdk.dir=/Users/Tim/Library/Android/sdk
+#Mon Oct 24 19:03:06 CDT 2016
+sdk.dir=C\:\\Users\\crkuk\\AppData\\Local\\Android\\sdk
