--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Oct 31 14:37:16 CDT 2016
-sdk.dir=/Users/Tim/Library/Android/sdk
+#Tue Nov 01 19:45:39 CDT 2016
+sdk.dir=C\:\\Android\\sdk
