--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,17 +6,15 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".RegisterActivity"
             android:label="Register"
             android:theme="@style/AppTheme" />
-
         <activity
             android:name=".LoginActivity"
             android:label="Sign-In"
-            android:theme="@style/AppTheme" >
-
+            android:theme="@style/AppTheme">
             <intent-filter android:label="@string/app_name">
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,7 +25,7 @@
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings"
             android:parentActivityName=".MainActivity"
-            android:theme="@style/AppTheme" >
+            android:theme="@style/AppTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.it326.isucarpool.MainActivity" />
@@ -40,7 +38,7 @@
             android:name=".RidesActivity"
             android:label="@string/title_activity_rides"
             android:parentActivityName=".MainActivity"
-            android:theme="@style/AppTheme" >
+            android:theme="@style/AppTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.it326.isucarpool.MainActivity" />
@@ -49,7 +47,7 @@
             android:name=".UserProfileActivity"
             android:label="@string/title_activity_user_profile"
             android:parentActivityName=".MainActivity"
-            android:theme="@style/AppTheme" >
+            android:theme="@style/AppTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.it326.isucarpool.MainActivity" />
@@ -58,11 +56,15 @@
             android:name=".ChatsActivity"
             android:label="@string/title_activity_chats"
             android:parentActivityName=".MainActivity"
-            android:theme="@style/AppTheme" >
+            android:theme="@style/AppTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.it326.isucarpool.MainActivity" />
         </activity>
+        <activity
+            android:name=".EmailVerificationActivity"
+            android:label="@string/title_activity_email_verification"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
