--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Nov 02 15:38:25 CDT 2016
-sdk.dir=/Users/Tim/Library/Android/sdk
+#Wed Nov 02 17:23:24 CDT 2016
+sdk.dir=C\:\\Android\\sdk
