Updated Strings file.

--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Nov 03 12:28:24 CDT 2016
-sdk.dir=C\:\\Android\\sdk
+#Sun Nov 13 00:32:14 CST 2016
+ndk.dir=C\:\\Users\\kalop\\AppData\\Local\\Android\\Sdk\\ndk-bundle
+sdk.dir=C\:\\Users\\kalop\\AppData\\Local\\Android\\Sdk
