--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Nov 13 00:32:14 CST 2016
-ndk.dir=C\:\\Users\\kalop\\AppData\\Local\\Android\\Sdk\\ndk-bundle
-sdk.dir=C\:\\Users\\kalop\\AppData\\Local\\Android\\Sdk
+#Mon Nov 14 21:12:07 CST 2016
+sdk.dir=C\:\\Android\\sdk
