--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Dec 01 13:43:18 CST 2016
-sdk.dir=C\:\\Android\\sdk
+#Fri Dec 02 14:10:51 CST 2016
+sdk.dir=/Users/Tim/Library/Android/sdk
