--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Dec 02 14:10:51 CST 2016
-sdk.dir=/Users/Tim/Library/Android/sdk
+#Mon Dec 05 19:06:30 CST 2016
+ndk.dir=C\:\\Users\\Ross\\AppData\\Local\\Android\\sdk\\ndk-bundle
+sdk.dir=C\:\\Users\\Ross\\AppData\\Local\\Android\\sdk
