--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Dec 02 14:10:51 CST 2016
-sdk.dir=/Users/Tim/Library/Android/sdk
+#Fri Dec 02 02:30:12 CST 2016
+sdk.dir=C\:\\Users\\Christopher Kukla\\AppData\\Local\\Android\\Sdk
