email verification blocker

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,10 @@
             android:label="Register"
             android:theme="@style/AppTheme" />
         <activity
+            android:name=".EmailVerificationActivity"
+            android:label="Email Verification"
+            android:theme="@style/AppTheme" />
+        <activity
             android:name=".LoginActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
